# pytorch_quantization

./: .gitignore  requirements.txt  test.py  train.py
configure/: problem.sh  storage.sh  storage_cfg.json
experiments/Covid19/: config.json  config_pact.json  config_static.json
experiments/Covid19/data/: CovidDataset.py  __init__.py  adapt.py
experiments/Covid19/logs/: README.MD
experiments/Covid19/logs/saves/: README.md
experiments/Covid19/logs/tensorboard/: README.md  events.out.tfevents.1667913830.massimiianosmbp.fbkeduroam.it.99891.0  events.out.tfevents.1667913907.massimiianosmbp.fbkeduroam.it.99975.0  events.out.tfevents.1667915191.massimiianosmbp.fbkeduroam.it.1056.0  (+6 more)
experiments/Covid19_dynamic/: config.json
experiments/Covid19_float/: config.json  data  logs
experiments/Covid19_pact/: config.json  data  logs
experiments/Covid19_qat/: config.json  data  logs
experiments/Covid19_static/: config.json
experiments/si-cura_34/: config.json
experiments/si_cura/: config.json
experiments/si_cura/data/: adapt.py
experiments/si_cura_float/: config.json
experiments/si_cura_float/data/: adapt.py
pytorch_quantization/: README.md  experiment.sh  pyproject.toml  setup.py  trainer.py
pytorch_quantization/meters/: meters.py
pytorch_quantization/models/: EnsembleResnet.py  MobileNetV2.py  __init__.py  resnet.py  resnet152_sicura.py  resnet34_sicura.py  resnet50_sicura.py
pytorch_quantization/observers/: __init__.py
pytorch_quantization/utils/: adjust_checkpoint.py  get_children.py
