[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-quantization"
version = "0.0.1"
authors = [
  { name="Massimiliano Datres", email="mdatres@fbk.eu" },
]
description = "Quantization Package based on PyTorch Quantization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

